# hello_jenkins

./: Dockerfile  Makefile  README.md  autogen.sh  build-dev.sh  build-docker.sh  build.sh  config.status  coreKit.pc  coreKit_config.h  libtool  run-docker.sh  stamp-h1
coreKit/: COPYING  Makefile.am  Makefile.in  aclocal.m4  banner.txt  configure  configure.ac  coreKit.pc.in  coreKit_config.h.in  coreKit_config.h.in~
coreKit/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
coreKit/m4/: ac_lib_version.m4  ax_backtrace.m4  ax_boost_program_options.m4  ax_boost_thread.m4  ax_check_enable_debug.m4
coreKit/samples/: Makefile.am  Makefile.in
coreKit/samples/app/: Makefile.am  Makefile.in  main.cpp
coreKit/samples/config/: Makefile.am  Makefile.in  main.cpp
coreKit/samples/log/: Makefile.am  Makefile.in  main.cpp
coreKit/samples/service/: Makefile.am  Makefile.in  main.cpp
coreKit/samples/stacktrace/: Makefile.am  Makefile.in  main.cpp
coreKit/samples/stream/: Makefile.am  Makefile.in  client.cpp  server.cpp
coreKit/samples/yaml/: Makefile.am  Makefile.in  config.yaml  main.cpp
coreKit/src/: Makefile.am  Makefile.in  coreKit_Version.cpp.in
coreKit/src/coreKit/: Makefile.am  Makefile.in
coreKit/src/coreKit/App/: App.cpp  App.hpp  CoreAPI.cpp  CoreAPI.hpp  Declarations.cpp  Declarations.hpp  Makefile.am  Makefile.in
coreKit/src/coreKit/Config/: Config.cpp  Config.hpp  Config.ipp  Makefile.am  Makefile.in  Parameter.cpp  Parameter.hpp  Parameter.ipp  ParameterType.cpp  ParameterType.hpp  ParameterType.ipp
coreKit/src/coreKit/Log/: ForwardSink.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  Makefile.am  Makefile.in
coreKit/src/coreKit/Network/: Adapter.cpp  Adapter.hpp  Common.hpp  Makefile.am  Makefile.in  NetworkEmulator.cpp  NetworkEmulator.hpp  ReliableAdapter.cpp  ReliableAdapter.hpp
coreKit/src/coreKit/Service/: Declarations.cpp  Declarations.hpp  Dependency.cpp  Dependency.hpp  Handle.cpp  Handle.hpp  Handler.cpp  Handler.hpp  Handler.ipp  Makefile.am  Makefile.in  Registry.cpp  Registry.hpp  Registry.ipp  Service.cpp  Service.hpp
coreKit/src/coreKit/Stream/: Client.cpp  Client.hpp  Makefile.am  Makefile.in  Server.cpp  Server.hpp  Session.cpp  Session.hpp
coreKit/src/coreKit/Stream/Internal/: ClientImpl.cpp  ClientImpl.hpp  ClientImpl.ipp  ServerImpl.cpp  ServerImpl.hpp  ServerImpl.ipp  SessionImpl.hpp  SessionImpl.ipp
coreKit/src/coreKit/Utils/: Colors.cpp  Colors.hpp  Context.cpp  Context.hpp  Crc.cpp  Crc.hpp  Functional.hpp  Makefile.am  Makefile.in  Singleton.hpp  Singleton.ipp  StackTrace.cpp  StackTrace.hpp  iziDeclarations.cpp  iziDeclarations.hpp
coreKit/src/coreKit/Version/: Makefile.am  Makefile.in  Version.cpp  Version.hpp
coreKit/tests/: Makefile.in
samples/: Makefile
samples/app/: Makefile
samples/config/: Makefile
samples/log/: Makefile
samples/service/: Makefile
samples/stacktrace/: Makefile
samples/stream/: Makefile
samples/yaml/: Makefile
src/: CMakeLists.txt  Makefile  NetworkUri.pc.in  coreKit_Version.cpp  func.cmake
src/coreKit/: Makefile
src/coreKit/App/: Makefile
src/coreKit/Config/: Makefile
src/coreKit/Log/: Makefile
src/coreKit/Network/: Makefile
src/coreKit/Service/: Makefile
src/coreKit/Stream/: Makefile
src/coreKit/Utils/: Makefile
src/coreKit/Version/: Makefile
src/network/: CMakeLists.txt  optional.hpp  uri.cpp  uri.hpp  uri_builder.cpp  uri_builder.hpp  uri_errors.cpp  uri_errors.hpp
src/network/detail/: decode.hpp  encode.hpp  grammar.hpp  uri_advance_parts.hpp  uri_normalize.cpp  uri_normalize.hpp  uri_parse.cpp  uri_percent_encode.hpp  uri_resolve.cpp  uri_resolve.hpp
tests/: Makefile
