noinst_LTLIBRARIES    = libconfig.la
libconfig_la_SOURCES  = \
  Config.cpp \
  Config.hpp \
  Config.ipp \
  Parameter.cpp \
  Parameter.hpp \
  Parameter.ipp \
  ParameterType.cpp \
  ParameterType.hpp \
  ParameterType.ipp

src_config_includedir       = $(includedir)/coreKit/Config
src_config_include_HEADERS  = \
  Config.hpp \
  Config.ipp \
  Parameter.hpp \
  Parameter.ipp \
  ParameterType.hpp \
  ParameterType.ipp
