AUTOMAKE_OPTIONS = subdir-objects

noinst_LTLIBRARIES      = libnetwork.la
libnetwork_la_SOURCES   = \
  Adapter.cpp \
  Adapter.hpp \
  Common.hpp \
  NetworkEmulator.cpp \
  NetworkEmulator.hpp \
  ReliableAdapter.cpp \
  ReliableAdapter.hpp

src_network_includedir      = $(includedir)/coreKit/Network
src_network_include_HEADERS = \
  Adapter.hpp \
  Common.hpp \
  NetworkEmulator.hpp \
  ReliableAdapter.hpp
