noinst_LTLIBRARIES      = libservice.la
libservice_la_SOURCES   = \
  Declarations.cpp \
  Declarations.hpp \
  Dependency.cpp \
  Dependency.hpp \
  Handle.cpp \
  Handle.hpp \
  Handler.cpp \
  Handler.hpp \
  Handler.ipp \
  Registry.hpp \
  Registry.cpp \
  Registry.ipp \
  Service.cpp \
  Service.hpp

src_service_includedir       = $(includedir)/coreKit/Service
src_service_include_HEADERS  = \
  Declarations.hpp \
  Dependency.hpp \
  Handle.hpp \
  Handler.hpp \
  Handler.ipp \
  Registry.hpp \
  Registry.ipp \
  Service.hpp
